--- a/frontend/src/components/styles/createSpotForm.css
+++ b/frontend/src/components/styles/createSpotForm.css
@@ -1,72 +1,47 @@
 /* CreateSpotForm.css */
+.create-spot-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  margin: 0 auto;
+}
 
-form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 1.5em;
-  }
-  
-  div {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-size: 1.1em;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 1em;
-    box-sizing: border-box;
-    transition: border-color 0.3s;
-  }
-  
-  input:focus {
-    border-color: #007BFF;
-    outline: none;
-  }
-  
-  span {
-    display: block;
-    margin-top: 5px;
-    color: red;
-    font-size: 0.9em;
-  }
-  
-  button {
-    width: 100%;
-    padding: 12px;
-    background-color: #007BFF;
-    color: white;
-    font-size: 1.1em;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  button:active {
-    background-color: #003f7f;
-  }
-  
-  
-  
+.create-spot-form section {
+  margin-bottom: 20px;
+}
+
+.create-spot-form h3 {
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+}
+
+.create-spot-form p {
+  font-size: 0.9rem;
+  color: gray;
+  margin-bottom: 10px;
+}
+
+.create-spot-form input,
+.create-spot-form textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.create-spot-form button {
+  background-color: #ff385c;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.create-spot-form button:hover {
+  background-color: #e03150;
+}
+.error-message{
+  color: red
+}
