--- a/frontend/src/components/styles/spotDetail.css
+++ b/frontend/src/components/styles/spotDetail.css
@@ -143,7 +143,7 @@
 button {
   width: 100%;
   padding: 10px;
-  background-color: #ff5a5f;
+  /* background-color: #ff5a5f; */
   color: white;
   border: none;
   border-radius: 5px;
