improved the styling for demo button

--- a/frontend/src/components/styles/demoLoginButton.css
+++ b/frontend/src/components/styles/demoLoginButton.css
@@ -1,6 +1,6 @@
 .demo-login-button {
     padding: 10px 20px;
-    background-color: #28a745;
+    background-color: #25ad44;
     color: white;
     border: none;
     border-radius: 4px;
